@@ -7,6 +7,7 @@ Stopped setting and sending tid (#94)
 Started setting and sending eid (#93)
 Allowed a single Tracker instance to send events to multiple Emitters (#91)
 Started passing a list of dictionaries to the on_failure callback for POST requests (#104)
+Made the "name" argument of track_screen_view optional (#103)
 
 Version 0.4.0 (2014-06-10)
 --------------------------
